Bugfix: Ensure the breadcrumb arrows are visible
This was original black on grey.
It is now white on grey.

Ticket: www-6

--- a/sites/all/themes/genesis/genesis_mcneese/css/layout.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/layout.css
@@ -307,6 +307,7 @@ div#block-system-navigation ul.menu li a:active {
 /*** Content - main content **/
 div#content-column div.breadcrumb {
   background-color: #454545;
+  color: #ffffff;
 
   width: 100%;
 
